--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -143,6 +143,6 @@
                 =form_tag  ml_list_add_email_path(@ml_list)   do
                   =email_field_tag :email, "", class: "validate col s4", required: 'required'
                   =label_tag "email@domaine.fr"
-                  =button_tag '+ Ajouter',:class => "waves-effect waves-light btn"
+                  =button_tag 'Ajouter',:class => "waves-effect waves-light btn"
 
 
