Fix link in unsubscribe mail button

--- a/app/views/unsubscribe_mailer/confirm_email.html.haml
+++ b/app/views/unsubscribe_mailer/confirm_email.html.haml
@@ -3,7 +3,7 @@
 %p Vous avez demandé à vous désinscrire des listes de diffusion Gadz.org.
 
 .txtcenter.bouton.bouton_bleu
-  =link_to "Selectionner mes listes de diffusion", unsubscribe_url(@token) ,:class => "bouton bouton_orange_1 txtcenter"
+  =link_to "Selectionner mes listes de diffusion", unsubscribe_token_url(@token) ,:class => "bouton bouton_orange_1 txtcenter"
 
 %p
   Si ce lien ne fonctionne pas, copiez l'adresse suivante puis collez-la dans une nouvelle fenêtre de navigateur :
