--- a/app/views/ml/external_invitation/accept_invitation.html.haml
+++ b/app/views/ml/external_invitation/accept_invitation.html.haml
@@ -1,12 +1,19 @@
-%p
-  Vous êtes inviter à rejoindre le groupe de discussion
-  %b
-    =@list.name
+%p#notice= notice
+%h2 Vous êtes inviter à rejoindre un groupe de discussion
+
+=form_tag ml_accept_external_invitation_path(@token.token), method: :post do
 
 
-  =form_tag ml_accept_external_invitation_path(@token.token), method: :post do
-    -if @cgu_retry
-      %p Vous devez valider les CGU pour continuer
-    =check_box_tag :accept_cgu
-    =label_tag :accept_cgu, "J'accepte les CGU'"
-    =submit_tag "Rejoindre le groupe"
+  .row
+    .l6.s12.col
+      .card
+        .card-content
+          %p Un administrateur du groupe de discussion <b>#{@list.name}</b> vous invite à participer à ce groupe.
+
+          -if @cgu_retry
+            %p Vous devez valider les CGU pour continuer
+          .input-field
+            =check_box_tag :accept_cgu
+            =label_tag :accept_cgu, "J'accepte les CGU"
+        .card-action
+          =submit_tag "Rejoindre le groupe", class:'waves-effect waves-teal btn'
