--- a/app/views/ml/external_invitation/accept_cgu.html.haml
+++ b/app/views/ml/external_invitation/accept_cgu.html.haml
@@ -1,4 +1,13 @@
-%h2
-  Félicitations ! Vous etes maintenant membre du groupe de discussion
-  %b
-    =@list.name
+%p#notice= notice
+
+%div.center-align
+  %h2
+    %i.zmdi.zmdi-thumb-up.icon-padding-list
+  %h2
+    Félicitations !
+
+  %p Vous etes maintenant membre du groupe de discussion <b>#{@list.name}</b> !
+
+  %p
+    Vous pouvez vous désinscrire à tout moment en cliquant sur le lien contenu au bas des message de ce groupe ou en vous connectant à
+    =link_to unsubscribe_url, unsubscribe_url
