bug fix and typo

--- a/app/views/unsubscribe/unknown_token.html.haml
+++ b/app/views/unsubscribe/unknown_token.html.haml
@@ -9,4 +9,4 @@
   %p
     Ce lien a déjà été utilisé ou n'est plus valable. Vous pouvez demander l'envoi d'un mail avec un nouveau lien de désinscription
 
-  =link_to "Envoyer un nouveau mail", unsubscribe_path, class: "waves-effect waves-light btn"
+  =link_to "Envoyer un nouvel email", unsubscribe_path, class: "waves-effect waves-light btn"
