--- a/app/views/ml/external_invitation/accept_invitation.html.haml
+++ b/app/views/ml/external_invitation/accept_invitation.html.haml
@@ -1,5 +1,5 @@
 %p#notice= notice
-%h2 Vous êtes inviter à rejoindre un groupe de discussion
+%h2 Vous êtes invité à rejoindre un groupe de discussion
 
 =form_tag ml_accept_external_invitation_path(@token.token), method: :post do
 
@@ -9,6 +9,8 @@
       .card
         .card-content
           %p Un administrateur du groupe de discussion <b>#{@list.name}</b> vous invite à participer à ce groupe.
+
+          %p En acceptant cette invitation, vous receverez les mails envoyé à g199@poubs.org et vous pourrez également échanger avec les autres membre de cette liste en écrivant à cette même adresse
 
           -if @cgu_retry
             %p Vous devez valider les CGU pour continuer
