add tests for current setup workflow

--- a/app/views/setup/index.html.haml
+++ b/app/views/setup/index.html.haml
@@ -15,7 +15,7 @@
           %p
             Tu peux recevoir les mails envoyés à ton adresse #{@primary_email} sur un compte Google Gadz.org
           .input-field
-            =check_box_tag :google_apps, "", 1
+            =check_box_tag :google_apps, "true", 1
             =label_tag :google_apps,"Je veux un compte Google Gadz.org", :for => "google_apps"
 
 
