--- a/app/views/ml/external_invitation/accept_invitation.html.haml
+++ b/app/views/ml/external_invitation/accept_invitation.html.haml
@@ -10,7 +10,7 @@
         .card-content
           %p Un administrateur du groupe de discussion <b>#{@list.name}</b> vous invite à participer à ce groupe.
 
-          %p En acceptant cette invitation, vous receverez les mails envoyé à g199@poubs.org et vous pourrez également échanger avec les autres membre de cette liste en écrivant à cette même adresse
+          %p En acceptant cette invitation, vous receverez les mails envoyé à <b>#{@list.name}</b> sur votre adresse <b>#{@email}</b> et vous pourrez également échanger avec les autres membre de cette liste en écrivant à cette même adresse.
 
           -if @cgu_retry
             %p Vous devez valider les CGU pour continuer
