--- a/app/views/external_invitation_mailer/send_invitation.html.haml
+++ b/app/views/external_invitation_mailer/send_invitation.html.haml
@@ -1,6 +1,6 @@
 %p Bonjour,
 
-%p Vous êtes invitez à rejoindre la liste de discussion Gadz.org "#{@list.name}"
+%p Vous êtes invité à rejoindre la liste de discussion Gadz.org "#{@list.name}"
 
 %p En acceptant cette invitation, vous receverez les mails envoyé à g199@poubs.org et vous pourrez également échanger avec les autres membre de cette liste en écrivant à cette même adresse
 
