--- a/app/views/external_invitation_mailer/send_invitation.html.haml
+++ b/app/views/external_invitation_mailer/send_invitation.html.haml
@@ -2,7 +2,7 @@
 
 %p Vous êtes invité à rejoindre la liste de discussion Gadz.org "#{@list.name}"
 
-%p En acceptant cette invitation, vous receverez les mails envoyé à g199@poubs.org et vous pourrez également échanger avec les autres membre de cette liste en écrivant à cette même adresse
+%p En acceptant cette invitation, vous receverez les mails envoyé à "#{@list.email}" et vous pourrez également échanger avec les autres membre de cette liste en écrivant à cette même adresse
 
 .txtcenter.bouton.bouton_bleu
   =link_to "Accepter l'invitation", ml_accept_external_invitation_url(@token.token) ,:class => "bouton bouton_orange_1 txtcenter"
