--- a/app/views/setup/index.html.haml
+++ b/app/views/setup/index.html.haml
@@ -34,9 +34,9 @@
             %p Pour tirer un plein parti de tes adresses gadz.org, nous te recommandons de t'inscrire aux trois listes de diffusions suivantes :
 
             %ul.browser-default
-              %li Pour échanger avec tes Promsquets, ta ML de Prom's : <u>#{@mailing_lists[:proms]&.email}</u>
-              %li Pour recevoir les infos de ton Tabagn's vers les PGs : <u>#{@mailing_lists[:tabagns]&.email}</u>
-              %li Pour recevoir les infos de l'UE vers les PGs : <u>#{@mailing_lists[:info]&.email}</u>
+              %li Pour échanger avec tes Promsquets, ta ML de Prom's : <u>#{@mailing_lists[:proms] ? @mailing_lists[:proms].email : '-'}</u>
+              %li Pour recevoir les infos de ton Tabagn's vers les PGs : <u>#{@mailing_lists[:tabagns] ? @mailing_lists[:tabagns].email : '-'}</u>
+              %li Pour recevoir les infos de l'UE vers les PGs : <u>#{@mailing_lists[:info] ? @mailing_lists[:info].email : '-'}</u>
 
             .input-field
               =check_box_tag :default_mls, "true", 1
