Fix checkbox behavior (material bug)
Closes JIRA-220
Closes JIRA-229

--- a/app/assets/stylesheets/materialize-fix.scss
+++ b/app/assets/stylesheets/materialize-fix.scss
@@ -37,7 +37,10 @@ input[type="submit"] {
 }
 
 
-.modal.bottom-sheet-big
-{
+.modal.bottom-sheet-big {
   max-height: 84%;
+}
+
+.input-field label {
+  pointer-events: auto;
 }
