MailingList: decline invitation link in invitation email and reword email
Closes JIRA-GORGMAIL-206
https://jira.gadz.org/browse/GORGMAIL-206

--- a/app/views/external_invitation_mailer/send_invitation.html.haml
+++ b/app/views/external_invitation_mailer/send_invitation.html.haml
@@ -11,5 +11,7 @@
   Si ce lien ne fonctionne pas, copiez l'adresse suivante puis collez-la dans une nouvelle fenêtre de navigateur :
 %p=ml_accept_external_invitation_url(@token.token)
 
+%br
 %p.small
-  Si vous ne souhaitez pas donner suite à cette invitation, vous pouvez simplement l'ignorer.
+  Autrement, vous pouvez
+  = link_to "décliner cette invitation", ml_decline_external_invitation_url(@token.token)
