--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -2,13 +2,13 @@
 -unless @user.has_google_apps
   %div.card.blue-grey.darken-1
     .card-content.white-text.flow-text
-      Avec un compte GSuite, je reçois mes mails gadz.org en toute simplicité !
+      Avec un compte Google Suite Gadz.org, je reçois mes mails gadz.org en toute simplicité !
     .card-action
-      .mts= link_to ' Créer mon compte Google Apps ', create_google_apps_user_path(@user), method: :get,:remote=>true,  :class =>"waves-effect waves-light btn white blue-grey-text", id: "create_google_apps_button"
+      .mts= link_to ' Créer mon compte Google Gadz.org ', create_google_apps_user_path(@user), method: :get,:remote=>true,  :class =>"waves-effect waves-light btn white blue-grey-text", id: "create_google_apps_button"
   -if @emails_redirect.select{|e| e.active?}.count == 0
     .card.red.darken-4
       .card-content.white-text
-        Attention ! Tu dois activer une des adresses ci-dessous ou créer un compte GSuite Gadz.org pour recevoir les emails envoyés à ton adresse gadz.org,
+        Attention ! Tu dois activer une des adresses ci-dessous ou créer un compte Google Suite Gadz.org pour recevoir les emails envoyés à ton adresse gadz.org,
 .card
   .card-content
     %ul#era_list
