Update _er_list.html.haml wording create Google account
"GSuite" wording replace by "Google Suite Gadz.org", "en cours de création" replace by "est en cours de création"

--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -60,7 +60,7 @@
                   .card-content.white-text
                     %span
                       %i.zmdi.zmdi-google.icon-padding-list
-                      Ton compte GSuite Gadz.org en cours de création...
+                      Ton compte Google Suite Gadz.org est en cours de création...
 
         -else
           %li
