--- a/app/views/layouts/no-menu.html.haml
+++ b/app/views/layouts/no-menu.html.haml
@@ -1,11 +1,13 @@
 %html
   %head
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    %title= Rails.application.secrets.app_name
+    -# %title= Rails.application.secrets.app_name
+    %title= "emails.gadz.org"
     = csrf_meta_tags
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag :application
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
+    %link{:href => "/assets/favicon.ico", :rel="shortcut icon"}/
     -if slack_chat?
       = tags_for_gorg_slack_chat
 
