--- a/app/views/layouts/no-menu.html.haml
+++ b/app/views/layouts/no-menu.html.haml
@@ -7,7 +7,7 @@
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag :application
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}
-    %link{:href => "/assets/favicon.ico", :rel="shortcut icon"}/
+    %link{:href => "/assets/favicon.ico", :rel => "shortcut icon"}/
     -if slack_chat?
       = tags_for_gorg_slack_chat
 
