--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,10 +7,9 @@
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag :application
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}
-    %link{:href => "/assets/favicon.ico", :rel => "shortcut icon"}/
+    %link{:href => image_tag "favicon.ico", :rel => "shortcut icon"}/
     -if slack_chat?
       = tags_for_gorg_slack_chat
-
       
   %body#body
     %header
