--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -7,8 +7,8 @@
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag :application
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}
-    -# %link{:href => "/assets/favicon.ico", :rel => "shortcut icon"}/
-    = favicon_link_tag 'favicon.ico' /
+    -# = favicon_link_tag 'favicon.ico' /
+    %link{:href => "/favicon.ico", :rel => "shortcut icon"}/
     -if slack_chat?
       =javascript_include_tag 'slack-chat.min.js'
       =javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js'
