--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -8,7 +8,7 @@
     = javascript_include_tag :application
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}
     -# = favicon_link_tag 'favicon.ico' /
-    %link{:href => "/favicon.ico", :rel => "shortcut icon"}/
+    %link{:href => "/images/favicon.ico", :rel => "shortcut icon"}/
     -if slack_chat?
       =javascript_include_tag 'slack-chat.min.js'
       =javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js'
