--- a/app/views/layouts/no-menu.html.haml
+++ b/app/views/layouts/no-menu.html.haml
@@ -6,8 +6,9 @@
     = csrf_meta_tags
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag :application
-    %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}
-    %link{:href => "/assets/favicon.ico", :rel => "shortcut icon"}/
+    = favicon_link_tag
+    %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
+
     -if slack_chat?
       = tags_for_gorg_slack_chat
 
