--- a/app/views/static_pages/landing.html.haml
+++ b/app/views/static_pages/landing.html.haml
@@ -8,8 +8,9 @@
         .txtcenter
           %h1 Emails gadz.org
           .sub-title
-            Gadzmelv2, Imelavi, listes de diffusion.
-          %p Retrouve tous les services mails gadz.org dans un même endroit.
+            Gestion des redirections mails et des comptes Google Gadz.org
+          %p Retrouve tous les services mails gadz.org au même endroit
+          %p Service offert par la Société des Ingénieurs Arts & Métiers
 
           .skip-links.sup
           -if @maintenance_mode
