--- a/app/views/users/modals/_add_era.html.haml
+++ b/app/views/users/modals/_add_era.html.haml
@@ -10,7 +10,9 @@
     Microsoft (hotmail.com et live.com) et dbmail
     qui refusent régulierement les mails de la communauté ;
     
-    %p %b LaPoste.net et Free ont tendance à refuser quasiment 10% des mails transférés par Gadz.org (sur quelques milliers par jour).
+    %p 
+    %b LaPoste.net et Free
+    ont tendance à refuser quasiment 10% des mails transférés par Gadz.org.
     
     
   =form_for  [user,new_era], :remote=>true  do |f|
