--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -4,5 +4,5 @@
   .mam
     .content.mw800p.center
       .pam
-        %p=image_tag "http://www.arts-et-metiers.asso.fr/images/logo.png", height: '50'
+        %p=image_tag "https://am.arts-et-metiers.asso.fr/images/logo.png", height: '50'
         = yield
