--- a/app/views/email_validation_mailer/notice_google_apps.html.haml
+++ b/app/views/email_validation_mailer/notice_google_apps.html.haml
@@ -27,7 +27,7 @@
 %p
   Pense aussi à jeter un oeil à
   =link_to "la liste des outils Google", "https://www.google.fr/intl/fr/about/products/",:class => "light"
-  utilisables grace à ton compte G Suite et à cette
+  utilisables grace à ton compte Google Workspace et à cette
   =link_to "aide rédigée par la communauté","https://confluence.gadz.org/display/AIDE/La+suite+Google+Application+pour+Gadz.org",:class => "light"
 
 %p.small
