feat(redirection UI): update link and remove test message

--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -109,5 +109,5 @@
     -# =render(partial: 'users/modals/modal_sheet_mobile_only_buttons', locals: {text: "Ajouter une adresse",button_class:'modal-trigger waves-effect waves-light btn',id:'add-era'})
 
     // Add a link to redirections.gadzarts.org with the text : "Demander une modification"
-    = link_to "Demander une modification", "https://redirections.gadz.org", :class =>"waves-effect waves-light btn", :target => "_blank", id: "ask_for_update"
+    = link_to "Demander une modification", "https://services.gadz.org/messagerie/modif-redirections", :class =>"waves-effect waves-light btn", :target => "_blank", id: "ask_for_update"
 
