--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -30,9 +30,9 @@
           =render partial: "shared/er_list", locals: {emails_redirect: @emails_redirect}
       =render(partial: "users/modals/modal_sheet_mobile_only_modals", locals: {modal_partial: "users/modals/add_era",id:'add-era',modal_locals:{user: @user, new_era: @user.email_redirect_accounts.new}})
 
-      .card.blue-grey.darken-1
-        .card-content
-          Test message d'information
+      -# .card.blue-grey.darken-1
+      -#   .card-content
+      -#     Test message d'information
 
 
   =javascript_include_tag 'email_redirect_tracking.js' if google_analytics_id
